--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Webmeadow
+title: webmeadow
 slogan: We help progressive organizations develop content and technology strategies that fulfill their missions to make the world a better place.
 email: info@webmeadow.com
 phone: "[603] 397 0156"
